--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -1,26 +1,24 @@
 :root {
-    --light-hl-0: #800000;
-    --dark-hl-0: #808080;
-    --light-hl-1: #800000;
-    --dark-hl-1: #569CD6;
-    --light-hl-2: #000000FF;
-    --dark-hl-2: #D4D4D4;
-    --light-hl-3: #E50000;
+    --light-hl-0: #0000FF;
+    --dark-hl-0: #569CD6;
+    --light-hl-1: #000000;
+    --dark-hl-1: #D4D4D4;
+    --light-hl-2: #795E26;
+    --dark-hl-2: #DCDCAA;
+    --light-hl-3: #001080;
     --dark-hl-3: #9CDCFE;
-    --light-hl-4: #0000FF;
-    --dark-hl-4: #CE9178;
-    --light-hl-5: #0000FF;
-    --dark-hl-5: #569CD6;
-    --light-hl-6: #000000;
-    --dark-hl-6: #D4D4D4;
-    --light-hl-7: #0070C1;
-    --dark-hl-7: #4FC1FF;
-    --light-hl-8: #001080;
-    --dark-hl-8: #9CDCFE;
-    --light-hl-9: #A31515;
-    --dark-hl-9: #CE9178;
-    --light-hl-10: #000000;
-    --dark-hl-10: #C8C8C8;
+    --light-hl-4: #267F99;
+    --dark-hl-4: #4EC9B0;
+    --light-hl-5: #008000;
+    --dark-hl-5: #6A9955;
+    --light-hl-6: #A31515;
+    --dark-hl-6: #CE9178;
+    --light-hl-7: #800000;
+    --dark-hl-7: #808080;
+    --light-hl-8: #800000;
+    --dark-hl-8: #569CD6;
+    --light-hl-9: #000000FF;
+    --dark-hl-9: #D4D4D4;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -36,7 +34,6 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
-    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 } }
 
@@ -51,7 +48,6 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
-    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 } }
 
@@ -66,7 +62,6 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
-    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 }
 
@@ -81,7 +76,6 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
-    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 }
 
@@ -95,5 +89,4 @@
 .hl-7 { color: var(--hl-7); }
 .hl-8 { color: var(--hl-8); }
 .hl-9 { color: var(--hl-9); }
-.hl-10 { color: var(--hl-10); }
 pre, code { background: var(--code-background); }
